@@ -2,31 +2,15 @@
 #
 # $Id$
 #
-# Copyright (c) 2010 by ['Tiberiu Ichim']
-# Generator: ArchGenXML 
-#            http://plone.org/products/archgenxml
-#
-# GNU General Public License (GPL)
-#
-
-__author__ = """Tiberiu Ichim <unknown>"""
-__docformat__ = 'plaintext'
 
 from AccessControl import ClassSecurityInfo
+from Products.ATContentTypes.content.base import ATCTContent, ATContentTypeSchema
+from Products.ATContentTypes.content.schemata import finalizeATCTSchema
 from Products.Archetypes.atapi import *
+from Products.CMFDynamicViewFTI.browserdefault import BrowserDefaultMixin
+from eea.indicators.config import *
 from zope.interface import implements
 import interfaces
-from Products.ATContentTypes.content.base import ATCTContent
-from Products.CMFDynamicViewFTI.browserdefault import BrowserDefaultMixin
-
-from eea.indicators.config import *
-
-# additional imports from tagged value 'import'
-from Products.ATContentTypes.content.base import ATCTContent, ATContentTypeSchema
-
-##code-section module-header #fill in your manual code here
-from Products.ATContentTypes.content.schemata import finalizeATCTSchema
-##/code-section module-header
 
 schema = Schema((
 
@@ -65,17 +49,12 @@ schema = Schema((
 ),
 )
 
-##code-section after-local-schema #fill in your manual code here
-##/code-section after-local-schema
-
 PolicyQuestion_schema = ATContentTypeSchema.copy() + \
     getattr(ATCTContent, 'schema', Schema(())).copy() + \
     schema.copy()
 
-##code-section after-schema #fill in your manual code here
 finalizeATCTSchema(PolicyQuestion_schema)
 PolicyQuestion_schema['relatedItems'].widget.visible = {'view':'invisible', 'edit':'invisible'}
-##/code-section after-schema
 
 class PolicyQuestion(ATCTContent, BrowserDefaultMixin):
     """
@@ -89,17 +68,5 @@ class PolicyQuestion(ATCTContent, BrowserDefaultMixin):
 
     schema = PolicyQuestion_schema
 
-    ##code-section class-header #fill in your manual code here
-    ##/code-section class-header
-
-    # Methods
-
 
 registerType(PolicyQuestion, PROJECTNAME)
-# end of class PolicyQuestion
-
-##code-section module-footer #fill in your manual code here
-##/code-section module-footer
-
-
-
