@@ -2,33 +2,19 @@
 #
 # $Id$
 #
-# Copyright (c) 2010 by ['Tiberiu Ichim']
-# Generator: ArchGenXML 
-#            http://plone.org/products/archgenxml
-#
-# GNU General Public License (GPL)
-#
-
-__author__ = """Tiberiu Ichim <unknown>"""
-__docformat__ = 'plaintext'
 
 from AccessControl import ClassSecurityInfo
+from Products.ATContentTypes.content.link import ATLink
+from Products.ATContentTypes.content.link import ATLink, ATLinkSchema
+from Products.ATContentTypes.content.schemata import finalizeATCTSchema
 from Products.Archetypes.atapi import *
+from Products.CMFCore import permissions
+from Products.CMFDynamicViewFTI.browserdefault import BrowserDefaultMixin
+from Products.CMFPlone.utils import getToolByName
+from eea.indicators.config import *
 from zope.interface import implements
 import interfaces
-from Products.ATContentTypes.content.link import ATLink
-from Products.CMFDynamicViewFTI.browserdefault import BrowserDefaultMixin
 
-from eea.indicators.config import *
-
-# additional imports from tagged value 'import'
-from Products.ATContentTypes.content.link import ATLink, ATLinkSchema
-
-##code-section module-header #fill in your manual code here
-from Products.CMFPlone.utils import getToolByName
-from Products.ATContentTypes.content.schemata import finalizeATCTSchema
-from Products.CMFCore import permissions
-##/code-section module-header
 
 schema = Schema((
 
@@ -73,17 +59,12 @@ schema = Schema((
 ),
 )
 
-##code-section after-local-schema #fill in your manual code here
-##/code-section after-local-schema
-
 RationaleReference_schema = ATLinkSchema.copy() + \
     getattr(ATLink, 'schema', Schema(())).copy() + \
     schema.copy()
 
-##code-section after-schema #fill in your manual code here
 RationaleReference_schema['relatedItems'].widget.visible = {'view':'invisible', 'edit':'invisible'}
 finalizeATCTSchema(RationaleReference_schema)
-##/code-section after-schema
 
 class RationaleReference(ATLink, BrowserDefaultMixin):
     """
@@ -97,12 +78,6 @@ class RationaleReference(ATLink, BrowserDefaultMixin):
 
     schema = RationaleReference_schema
 
-    ##code-section class-header #fill in your manual code here
-    ##/code-section class-header
-
-    # Methods
-
-    # Manually created methods
 
     security.declarePublic("Description")
     def Description(self):
@@ -118,10 +93,3 @@ class RationaleReference(ATLink, BrowserDefaultMixin):
 
 
 registerType(RationaleReference, PROJECTNAME)
-# end of class RationaleReference
-
-##code-section module-footer #fill in your manual code here
-##/code-section module-footer
-
-
-
