@@ -3,19 +3,8 @@
 # $Id$
 #
 
-__author__ = """Tiberiu Ichim <unknown>"""
-__docformat__ = 'plaintext'
-
-
-##code-section init-module-header #fill in your manual code here
 # Validators
 import validators
-
-##/code-section init-module-header
-
-
-# Subpackages
-# Additional
 
 # Classes
 import PolicyQuestion
@@ -28,10 +17,8 @@ import AssessmentPart
 import PolicyDocumentReference
 import WorkItem
 
-##code-section init-module-footer #fill in your manual code here
 # V1 content
 import FactSheetDocument
 import IndicatorFactSheet
 import KeyMessage
-##/code-section init-module-footer
 
